# ae-sentence-embeddings

./: .gitignore  Dockerfile  LICENSE  README.md  config_example.json  fine_tune_config_example.json  pyproject.toml  requirements.txt  setup.py
ae_sentence_embeddings/: argument_handling.py  modeling_tools.py  pretrain_vae.py
ae_sentence_embeddings/ae_training/: __init__.py  __main__.py  custom_training_loop.py  hyperparameter_tuning.py  model_type_config.py  pretrain.py
ae_sentence_embeddings/callbacks/: __init__.py  checkpoint_and_log.py  schedulers.py
ae_sentence_embeddings/data/: __init__.py  __main__.py  calculate_dataset_length.py  prepare_dataset.py  tokenize_dataset.py  train_tokenizer.py
ae_sentence_embeddings/fine_tuning/: __init__.py  __main__.py  collect_args.py  fine_tune_encoder.py
ae_sentence_embeddings/layers/: __init__.py  bilingual.py  pooling.py  rnn_decoder.py  transformer_ae_layers.py
ae_sentence_embeddings/losses_and_metrics/: __init__.py  binary_metrics.py  ignorant_sparse_cat.py  regularization_losses.py  sparse_categorical_mcc.py
ae_sentence_embeddings/models/: __init__.py  ae_classifier_models.py  ae_models.py  submodels.py  vae_model.py
ae_sentence_embeddings/regularizers/: __init__.py  kl_annealer.py
config_examples/: config_example.json  fine_tune_config_example.json  sweep_config.yaml
docker/: entrypoint.sh
external_scripts/: calculate_dataset_length.py  download_datasets.py  get_sst2.py  predict_on_triplet.py  save_encoder_weights.py  save_model.py  test_on_dataset.py
fine_tuning/: fine_tune_encoder.py
test/: test_modeling_tools.py
test/ae_training/: test_pretrain.py
(+21 files in other folders)
