[tool.poetry]
name = "ae-sentence-embeddings"
version = "0.0.1"
description = "A package for training Transformer-based autoencoders"
readme = "README.md"
repository = "https://github.com/nyekibence/ae-sentence-embeddings"
authors = ["Nyéki Bence <nyeki.bence96@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.8.0"
tensorflow-addons = "^0.16.1"
wandb = "^0.12.11"
transformers = "^4.17.0"
datasets = "^2.0.0"

[tool.poetry.dev-dependencies]
poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
