[tool.poetry]
name = "ae-sentence-embeddings"
version = "0.1.0"
description = "A package for training Transformer-based autoencoders"
readme = "README.md"
repository = "https://github.com/nyekibence/ae-sentence-embeddings"
authors = ["Nyéki Bence <nyeki.bence96@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.9.1"
tensorflow-addons = "^0.17.1"
wandb = "^0.12.18"
transformers = "^4.20.1"
datasets = "^2.3.2"

[tool.poetry.dev-dependencies]
poetry2setup = "^1.0.0"
Sphinx = "^4.5.0"
jsonlines = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
